# devenv

./: README.md
autogen/: Makefile.am  Makefile_sub.am  autogen.sh  configure.in
cmake01/cmake_comm/: config.cmake  macros.cmake
cmake03/: CMakeLists.txt
cmake03/test/: CMakeLists.txt
cmake_conf/: CMakeLists.txt
cmake_conf/src/: aaa.cc
cmake_conf/src/.svn/: all-wcprops  entries
cmake_conf/src/.svn/text-base/: CMakeLists.txt.svn-base  aaa.h.svn-base
cmake_conf/test/.svn/: all-wcprops  entries
cmake_conf/test/.svn/text-base/: CMakeLists.txt.svn-base
cmake_conf/test1/: test2.cc
cmake_conf/test1/.svn/: all-wcprops  entries
cmake_conf/test1/.svn/text-base/: CMakeLists.txt.svn-base  test1.cc.svn-base
shells/: iconv_grow.sh
vim/: .vimrc  mk_tags
vim/.vim/.svn/: all-wcprops  entries
vim/.vim/.svn/text-base/: init.sh.svn-base
vim/.vim/after/.svn/: all-wcprops  entries
vim/.vim/after/ftplugin/.svn/: all-wcprops  entries
vim/.vim/autoload/.svn/: all-wcprops  entries
vim/.vim/autoload/omni/.svn/: all-wcprops  entries
vim/.vim/autoload/omni/common/.svn/: all-wcprops  entries
vim/.vim/autoload/omni/cpp/: utils.vim
vim/.vim/autoload/omni/cpp/.svn/: all-wcprops  entries
vim/.vim/codesnippets-c/.svn/: all-wcprops  entries
vim/.vim/colors/.svn/: all-wcprops  entries
vim/.vim/cpp_src/.svn/: all-wcprops  entries
vim/.vim/doc/: tags
vim/.vim/doc/.svn/: all-wcprops  entries
vim/.vim/ftplugin/.svn/: all-wcprops  entries
vim/.vim/macros/.svn/: all-wcprops  entries
vim/.vim/plugin/: gtags.vim
vim/.vim/plugin/.svn/: all-wcprops  entries
vim/.vim/plugin/templates/: c-class-using-new
vim/.vim/plugin/templates/.svn/: all-wcprops  entries
vim/.vim/plugin/templates/.svn/text-base/: c-class-description.svn-base  c-class.svn-base  c-file-header.svn-base  c-function-description.svn-base  cpp-class-description.svn-base  cpp-function-description.svn-base
vim/.vim/rc/.svn/: all-wcprops  entries
vim/.vim/wordlists/.svn/: all-wcprops  entries
vim2/: .vimrc  mk_tags
vim2/.vim/.svn/: all-wcprops  entries
vim3/: .vimrc  init.sh  youcompleteme.sh
vim3/.vim/: .netrwhist  ctags.sh  init.sh
vim3/.vim/.vim/colors/: zlight.vim
vim3/.vim/.vim/colors/.svn/: all-wcprops
vim3/.vim/.vim/cpp_src/.svn/: all-wcprops  entries
vim3/.vim/colors/.svn/: entries
